--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,3 +8,11 @@ jobs:
         uses: actions/checkout@v4.1.5
       - name: list files
         run: ls -l
+      - name: Installing Java 11 on the runner machine
+        uses: actions/setup-java@v4.2.1
+        with: 
+          java-version: '11'
+          distribution: 'temurin'
+          cache: 'maven'
+      - name: verify java
+        run: java -version
