--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -21,3 +21,7 @@ jobs:
            mvn package
            ls -l
            ls -l ./target
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3  
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
