--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -25,3 +25,11 @@ jobs:
         uses: docker/setup-qemu-action@v3  
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      - name: Create docker image
+        run: |
+           docker build -t myimage:latest
+           docker images
+      - name: Create docker container
+        run: |
+           docker run -dt --name c1 --hostname c1 myimage:latest
+           docker ps -a
