--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -27,9 +27,9 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Create docker image
         run: |
-           docker build -t myimage:latest
+           docker build -t newimage:latest
            docker images
       - name: Create docker container
         run: |
-           docker run -dt --name c1 --hostname c1 myimage:latest
+           docker run -dt --name c1 --hostname c1 newimage:latest
            docker ps -a
