--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -25,11 +25,9 @@ jobs:
         uses: docker/setup-qemu-action@v3  
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Create docker image
+      - name: Create docker image and container
         run: |
-           docker build -t newimage:latest
+           docker build . --file Dockerfile -t newimage:v1
            docker images
-      - name: Create docker container
-        run: |
-           docker run -dt --name c1 --hostname c1 newimage:latest
+           docker run -dt --name c1 --hostname c1 newimage:v1
            docker ps -a
