--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -31,3 +31,27 @@ jobs:
            docker images
            docker run -dt --name c1 --hostname c1 newimage:v1
            docker ps -a
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}  
+      - name: Docker push
+        run: |
+          docker tag newimage:${{ GITHUB.RUN_NUMBER }} Niranjanah/inte5:${{ GITHUB.RUN_NUMBER }}
+          docker tag myimage:${{ GITHUB.RUN_NUMBER }} Niranjanah/intel5:latest
+          docker push Niranjanah/intel5:latest
+          docker push Niranjanah/intel5:${{ GITHUB.RUN_NUMBER }}
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3  
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Docker container creation test
+        run: |
+          docker run -dt --name web1 Niranjanah/intel5:latest
+          docker ps
