--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -39,10 +39,10 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}  
       - name: Docker push
         run: |
-          docker tag newimage:${{ GITHUB.RUN_NUMBER }} Niranjanah/inte5:${{ GITHUB.RUN_NUMBER }}
-          docker tag myimage:${{ GITHUB.RUN_NUMBER }} Niranjanah/intel5:latest
-          docker push Niranjanah/intel5:latest
-          docker push Niranjanah/intel5:${{ GITHUB.RUN_NUMBER }}
+          docker tag newimage:${{ GITHUB.RUN_NUMBER }} niran736/inte5:${{ GITHUB.RUN_NUMBER }}
+          docker tag myimage:${{ GITHUB.RUN_NUMBER }} niran736/intel5:latest
+          docker push niran736/intel5:latest
+          docker push niran736/intel5:${{ GITHUB.RUN_NUMBER }}
   test:
     runs-on: ubuntu-latest
     needs: build
@@ -53,5 +53,5 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Docker container creation test
         run: |
-          docker run -dt --name web1 Niranjanah/intel5:latest
+          docker run -dt --name web1 niran736/intel5:latest
           docker ps
